5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1644_2445.log
== TEST (2019-04-11 16:33:54) 
-- CODE:
escalac= float(input("Graus C: "))
escalaf= float(input("Graus F: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    escalac= float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:35:32) 
-- CODE:
escala= float(input("Escala: "))
if (escala = 'C'):
	print('C')
else:
	print('F')

-- ERROR:
File "XXXX", line 2
    if (escala = 'C'):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:36:08) 
-- CODE:
escala= float(input('Escala: '))
if (escala = 'C'):
	print('C')
else:
	print('F')

-- ERROR:
File "XXXX", line 2
    if (escala = 'C'):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:02:12) 
-- CODE:
escala= input("C ou F: ")
valor= float(input("Valor da Temperatura: "))

if (escala == "C"):
	formula= (5/9*(valor - 32))
	print(round(formula, 2))
	
else:
	formula2=(valor * 1.8)+ 32
	print(round(formula2, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:02:43) 
-- CODE:
escala= input("C ou F: ")
valor= float(input("Valor da Temperatura: "))

if (escala == "C"):
	formula= (5/9*(valor - 32))
	print(round(formula, 2))
	
else:
	formula2=(valor * 1.8)+ 32
	print(round(formula2, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:03:00) 
-- CODE:
escala= input("C ou F: ")
valor= float(input("Valor da Temperatura: "))

if (escala == "C"):
	formula= (5/9*(valor - 32))
	print(round(formula, 2))
	
else:
	formula2=(valor * 1.8)+ 32
	print(round(formula2, 2))
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:04:25) 
-- CODE:
escala= input("C ou F: ")
valor= float(input("Valor da Temperatura: "))

if (escala == "C"):
	formula2=(valor * 1.8)+ 32
	print(round(formula2, 2))
	
else:
	formula= (5/9*(valor - 32))
	print(round(formula, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:04:37) 
-- CODE:
escala= input("C ou F: ")
valor= float(input("Valor da Temperatura: "))

if (escala == "C"):
	formula2=(valor * 1.8)+ 32
	print(round(formula2, 2))
	
else:
	formula= (5/9*(valor - 32))
	print(round(formula, 2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:04:55) 
-- CODE:
escala= input("C ou F: ")
valor= float(input("Valor da Temperatura: "))

if (escala == "C"):
	formula2=(valor * 1.8)+ 32
	print(round(formula2, 2))
	
else:
	formula= (5/9*(valor - 32))
	print(round(formula, 2))
-- EXECUTION TIME:
0.179884
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
